simplify mecab and kanjidict